--- a/templates/EN/programming.html
+++ b/templates/EN/programming.html
@@ -16,7 +16,7 @@
       <h3>
         <img width="113" height="62" src="{{ url_for('static', filename='img/logo-snap.png') }}" data-interchange="[{{ url_for('static', filename='img/logo-snap-large.png') }}, retina]" src="{{ url_for('static', filename='img/logo.png') }}" alt="Snap!">
       </h3>
-      <p>Snap</p>
+      <p>Scratch</p>
     </a>
   </div>
 
